Completed unit tests and jacoco report